--- a/less/variables.less
+++ b/less/variables.less
@@ -12,6 +12,12 @@
 @silver: #bec2c7;
 
 
+@pagination-hvr: #7e868f;
+@pagination-down: #e9ebec;
+
+@grey-base: #000; 
+
+
 // Scaffolding
 
 @body-bg: @white;
