--- a/less/blocks/box.less
+++ b/less/blocks/box.less
@@ -24,16 +24,16 @@
     position: absolute;
     z-index: 0;
     height: 200px;
-    width: 101%;
+    width: 100%;
     bottom: -115px;
     background-image: linear-gradient(12deg, transparent 50%, @white 50%),linear-gradient(-12deg, transparent 50%, @white 50%);
     background-size: 50% 200px;
     background-repeat: no-repeat;
-    background-position: 0 0, 99% 0;
+    background-position: 0 0, 100% 0;
   }
 
   &__container {
-    padding: 25px;
+    padding: 25px 0;
   }
 }
 
