--- a/less/blocks/slider.less
+++ b/less/blocks/slider.less
@@ -10,12 +10,22 @@
     background: @silver;
     border-radius: 50%;
     vertical-align: middle;
-  }
 
-  .active {
-    width: 12px;
-    height: 12px;
-    border: 3px solid @base-color;
-    background-color: @white;
+    &:hover,
+    &:focus {
+      background: #7e868f;
+    }
+
+    &:active {
+      background: #e9ebec;
+    }
+
+    .active {
+      width: 12px;
+      height: 12px;
+      border: 3px solid @base-color;
+      background-color: @white;
+      cursor: default;
+    }
   }
 }
