--- a/less/variables.less
+++ b/less/variables.less
@@ -1,6 +1,6 @@
-@screen-sm: 700px;
-@screen-md: 992px;
-@screen-lg: 1200px;
+// @screen-sm: 700px;
+// @screen-md: 992px;
+// @screen-lg: 1200px;
 
 
 
