--- a/less/blocks/box.less
+++ b/less/blocks/box.less
@@ -24,12 +24,13 @@
     position: absolute;
     z-index: 0;
     height: 200px;
-    width: 100%;
+    width: 100.5%;
     bottom: -115px;
     background-image: linear-gradient(12deg, transparent 50%, @white 50%),linear-gradient(-12deg, transparent 50%, @white 50%);
     background-size: 50% 200px;
     background-repeat: no-repeat;
-    background-position: 0 0, 100% 0;
+    background-position: 0 0, 99.5% 0;
+    overflow: hidden;
   }
 
   &__container {
@@ -46,5 +47,8 @@
 @media (min-width: 1450px) {
   .box--shear:before {
     transform: rotate(-3.7deg);
+  }
+  .box--angle:after {
+    bottom: -200px;
   }
 }
