--- a/less/blocks/slider.less
+++ b/less/blocks/slider.less
@@ -19,8 +19,8 @@
     &:active {
       background: #e9ebec;
     }
-
-    .active {
+  
+    &.active {
       width: 12px;
       height: 12px;
       border: 3px solid @base-color;
