--- a/less/blocks/features.less
+++ b/less/blocks/features.less
@@ -18,4 +18,14 @@
     line-height: 21px;
     padding-bottom: 13px;
   }
+
+  &__mob-img {
+    margin: -17px 0 0;
+    text-align: center;
+    overflow: hidden;
+
+    img {
+      margin-bottom: -42px;
+    }
+  }
 }
