--- a/less/blocks/price-table.less
+++ b/less/blocks/price-table.less
@@ -1,20 +1,126 @@
 .price-table {
+  width: 90%;
+  margin: -43px auto 18px;
 
   &__caption {
+    position: relative;
+    width: 100%;
     background: #283645;
     color: #fff;
     text-transform: uppercase;
     font-size: 18px;
     font-weight: 700;
     padding: 16px 15px;
-    width: 100%;
+    overflow: hidden;
 
 
     span {
       display: block;
-      font-weight: 300;
-      font-size: 24px;
-      line-height: 1.125;
+      padding: 3px 0 5px;
+      .big-caption;
     }
+  }
+
+  &__caption--flag {
+
+    &:before {
+      content: 'хит';
+      position: absolute;
+      left: -33px;
+      top: 13px;
+      height: 29px;
+      width: 115px;
+      background: #d22856;
+      margin: auto;
+      line-height: 28px;
+      vertical-align: middle;
+      transform: rotate(-45deg);
+      overflow: hidden;
+      font-size: 14px;
+      font-weight: 400;
+    }
+  }
+
+  &__caption--null {
+    background: transparent;
+  }
+
+  th {
+    width: 25%;
+    border-right: 2px solid @white;
+
+    &:last-child {
+      border-right: none;
+    }
+  }
+
+  td {
+    border: 2px solid #f2f2f2;
+    padding: 13px 25px 16px;
+    font-size: 14px;
+    background: @white;
+    text-transform: uppercase;
+    line-height: 30px;
+    vertical-align: middle;
+    
+    .check {
+      color: transparent;
+      font: 0/0 a;
+    }
+
+    .check > i {
+      display: block;
+      position: relative;
+      width: 30px;
+      height: 30px;
+      margin: auto;
+      vertical-align: middle;
+
+      &:before,
+      &:after {
+        content: '';
+        position: absolute;
+      }
+    }
+
+    .check > i:before {
+      top: 13px;
+      left: 4px;
+      width: 35px;
+      height: 2px;
+      background: #f25b26;
+      transform: rotate(-45deg);
+    }
+    .check > i:after {
+      top: 13px;
+      left: 3px;
+      width: 35px;
+      height: 2px;
+      background: #f25b26;
+      transform: rotate(-135deg);
+    }
+
+    .check > i.checked:after{
+      top: 14px;
+      left: 12px;
+      width: 28px;
+      height: 2px;
+      background: #3dc644;
+      transform: rotate(-47deg);
+    }
+    .check > i.checked:before{
+      top: 19px;
+      left: 4px;
+      width: 15px;
+      height: 2px;
+      background: #3dc644;
+      transform: rotate(-132deg);
+    }
+  }
+}
+
+.price-table--big {
+  td {
+    text-transform: none;
   }
 }
