--- a/less/blocks/price-table.less
+++ b/less/blocks/price-table.less
@@ -48,10 +48,7 @@
   th {
     width: 25%;
     border-right: 2px solid @white;
-
-    &:last-child {
-      border-right: none;
-    }
+    border-left: 2px solid @white;
   }
 
   td {
@@ -64,63 +61,74 @@
     vertical-align: middle;
     
     .check {
+      float: right;
       color: transparent;
       font: 0/0 a;
     }
+  }
 
-    .check > i {
-      display: block;
-      position: relative;
-      width: 30px;
-      height: 30px;
-      margin: auto;
-      vertical-align: middle;
+  .check > i {
+    display: block;
+    position: relative;
+    width: 30px;
+    height: 30px;
+    margin: auto;
+    vertical-align: middle;
 
-      &:before,
-      &:after {
-        content: '';
-        position: absolute;
-      }
-    }
-
-    .check > i:before {
-      top: 13px;
-      left: 4px;
-      width: 35px;
-      height: 2px;
-      background: #f25b26;
-      transform: rotate(-45deg);
-    }
-    .check > i:after {
-      top: 13px;
-      left: 3px;
-      width: 35px;
-      height: 2px;
-      background: #f25b26;
-      transform: rotate(-135deg);
-    }
-
-    .check > i.checked:after{
-      top: 14px;
-      left: 12px;
-      width: 28px;
-      height: 2px;
-      background: #3dc644;
-      transform: rotate(-47deg);
-    }
-    .check > i.checked:before{
-      top: 19px;
-      left: 4px;
-      width: 15px;
-      height: 2px;
-      background: #3dc644;
-      transform: rotate(-132deg);
+    &:before,
+    &:after {
+      content: '';
+      position: absolute;
     }
   }
+
+  .check > i:before {
+    top: 13px;
+    left: 4px;
+    width: 35px;
+    height: 2px;
+    background: #f25b26;
+    transform: rotate(-45deg);
+  }
+  .check > i:after {
+    top: 13px;
+    left: 3px;
+    width: 35px;
+    height: 2px;
+    background: #f25b26;
+    transform: rotate(-135deg);
+  }
+
+  .check > i.checked:after{
+    top: 14px;
+    left: 12px;
+    width: 28px;
+    height: 2px;
+    background: #3dc644;
+    transform: rotate(-47deg);
+  }
+  .check > i.checked:before{
+    top: 19px;
+    left: 4px;
+    width: 15px;
+    height: 2px;
+    background: #3dc644;
+    transform: rotate(-132deg);
+  }
 }
+
 
 .price-table--big {
   td {
     text-transform: none;
+  }
+
+  th {
+    &:first-child {
+      border-left: none;
+    }
+    &:last-child {
+      border-right: none;
+    }
   }
 }
