--- a/less/blocks/price-table.less
+++ b/less/blocks/price-table.less
@@ -121,6 +121,10 @@
 .price-table--big {
   td {
     text-transform: none;
+
+    .check {
+      float: none;
+    }
   }
 
   th {
@@ -132,3 +136,63 @@
     }
   }
 }
+
+
+
+// .slider {
+//     position: relative;
+// }
+// .slider-slides .slider__slide{
+//   min-height:390px;
+//   width:350px;
+//   float:left;
+//   background-color:#eee;
+// }
+// .slider-slides{
+//   width:300%;
+//   transition: transform .8s ease;
+// }
+// .slider-inner{
+//   overflow:hidden;
+// }
+// .slider-controls{
+//     position:absolute;
+//     bottom:93px;
+//     left:50%;
+//     width:200px;
+//     height:10px;
+//     margin-left:-100px;
+//     text-align:center;
+//     z-index:5;
+// }
+// .slider-controls label{
+//   display:inline-block;
+//     width:4px;
+//     height:4px;
+//     margin:0 3px;
+//     background:#fff;
+//     border:3px solid #fff;
+//     vertical-align:top;
+//     cursor:pointer;
+//     -webkit-border-radius:50%;
+//        -moz-border-radius:50%;
+//             border-radius:50%;
+//   transition: background-color .2s;
+// }
+// input[id^="btn-"]{
+//     display: none;
+// }
+// #btn-1:checked ~ .slider-controls label[for="btn-1"],
+// #btn-2:checked ~ .slider-controls label[for="btn-2"],
+// #btn-3:checked ~ .slider-controls label[for="btn-3"]{
+//     background-color:#c1c1c1;
+// }
+// #btn-1:checked ~ .slider-inner .slider-slides{
+//     transform:translate(0);
+// }
+// #btn-2:checked ~ .slider-inner .slider-slides{
+//     transform:translate(-350px);
+// }
+// #btn-3:checked ~ .slider-inner .slider-slides{
+//     transform:translate(-700px);
+// }
