--- a/css/style.css
+++ b/css/style.css
@@ -1362,9 +1362,6 @@ p {
 .page-header {
   background: rgba(0, 0, 0, 0.5);
 }
-.page-header__container {
-  padding: 16px 20px 20px;
-}
 .page-header__container:before,
 .page-header__container:after {
   content: " ";
@@ -1562,6 +1559,11 @@ p {
 .intro__apps-list li img {
   vertical-align: bottom;
 }
+@media (min-width: 700px) {
+  .intro__desc {
+    background: transparent;
+  }
+}
 .box {
   position: relative;
 }
@@ -1758,6 +1760,9 @@ p {
 }
 .price-table--big td {
   text-transform: none;
+}
+.price-table--big td .check {
+  float: none;
 }
 .price-table--big th:first-child {
   border-left: none;
