--- a/less/blocks/intro.less
+++ b/less/blocks/intro.less
@@ -1,6 +1,9 @@
 .intro {
   background: @base-color url(../img/bg__intro.png) 50% 0 no-repeat;
 
+  &__bg-img {
+    background: url(../img/bg__intro--hand.png) no-repeat 0 119%;
+  }
 
   &__container {
     position: relative;
