--- a/less/blocks/page-header.less
+++ b/less/blocks/page-header.less
@@ -13,6 +13,8 @@
 
   &__container {
     .clearfix();
+    max-width: 960px;
+    margin: 0 auto;
   }
 }
 
@@ -79,7 +81,7 @@
 .nav-toggle {
   position: absolute;
   top: 21px;
-  right: 37px;
+  right: 39px;
   padding: 10px 48px 16px 0px;
   color: transparent;
   font: 0/0 a;
@@ -130,8 +132,10 @@
   .main-nav ul > li > a {
     display: block;
     font-size: 18px;
+    font-weight: 400;
     color: @white;
     padding: 4px 35px;
+    text-transform: none;
   }
 }
 
