--- a/less/mymixins.less
+++ b/less/mymixins.less
@@ -15,11 +15,11 @@
 
 
 // Position
-.center-block() {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
+// .center-block() {
+//   display: block;
+//   margin-left: auto;
+//   margin-right: auto;
+// }
 
 
 // Color
