--- a/less/style.less
+++ b/less/style.less
@@ -1,23 +1,15 @@
-// Reset 
-@import 'vendors/normalize.less';
-
-
 // Variables and mixins
-@import 'vendors/grid-framework.less'; // bs
-@import 'vendors/grid.less'; // bs
-@import 'vendors/clearfix.less'; // bs
-@import 'vendors/responsive-visibility.less'; // bs
-@import 'vendors/responsive-utilities.less'; // bs
-@import 'vendors/variables.less'; // bs
+@import 'vendors/bootstrap.less'; // bs
 @import 'variables.less';
+// @import 'vendors/mixins.less';
 @import 'grid.less';
-@import 'mixins.less';
+@import 'mymixins.less';
 
 
 // CSS
 @import 'base/scaffolding.less';
 @import 'base/type.less';
-@import "base/layout.less";
+@import 'base/layout.less';
 
 
 // Blocks
@@ -30,5 +22,8 @@
 @import 'blocks/slider.less';
 @import 'blocks/price-table.less';
 @import 'blocks/features.less';
+@import 'blocks/effect.less';
 @import 'blocks/reviews.less';
 @import 'blocks/contacts.less';
+
+
