--- a/css/style.css
+++ b/css/style.css
@@ -1763,27 +1763,23 @@ p {
           transform: rotate(-5.6deg);
   z-index: -1;
 }
-.box--angle:after {
-  content: '';
-  position: absolute;
-  z-index: 0;
-  height: 200px;
-  width: 100.5%;
-  bottom: -115px;
-  background-image: linear-gradient(12deg, transparent 50%, #ffffff 50%), linear-gradient(-12deg, transparent 50%, #ffffff 50%);
-  background-size: 50% 200px;
-  background-repeat: no-repeat;
-  background-position: 0 0, 99.5% 0;
-  overflow: hidden;
-}
 .box__container {
   padding: 25px 0;
+}
+.box--angle {
+  margin-bottom: -77px;
+  height: 70px;
+  fill: #fff;
 }
 @media (min-width: 700px) {
   .box--shear:before {
     -webkit-transform: rotate(-4.4deg);
         -ms-transform: rotate(-4.4deg);
             transform: rotate(-4.4deg);
+  }
+  .box--angle {
+    margin-bottom: -150px;
+    height: 145px;
   }
 }
 @media (min-width: 1450px) {
@@ -1792,8 +1788,9 @@ p {
         -ms-transform: rotate(-3.7deg);
             transform: rotate(-3.7deg);
   }
-  .box--angle:after {
-    bottom: -200px;
+  .box--angle {
+    margin-bottom: -255px;
+    height: 250px;
   }
 }
 .slider__pagination {
