--- a/less/blocks/box.less
+++ b/less/blocks/box.less
@@ -19,28 +19,40 @@
   }
 
 
-  &--angle:after {
-    content: '';
-    position: absolute;
-    z-index: 0;
-    height: 200px;
-    width: 100.5%;
-    bottom: -115px;
-    background-image: linear-gradient(12deg, transparent 50%, @white 50%),linear-gradient(-12deg, transparent 50%, @white 50%);
-    background-size: 50% 200px;
-    background-repeat: no-repeat;
-    background-position: 0 0, 99.5% 0;
-    overflow: hidden;
-  }
+  // &--angle:after {
+  //   content: '';
+  //   position: absolute;
+  //   z-index: 0;
+  //   height: 200px;
+  //   width: 100.5%;
+  //   bottom: -115px;
+  //   background-image: linear-gradient(12deg, transparent 50%, @white 50%),linear-gradient(-12deg, transparent 50%, @white 50%);
+  //   background-size: 50% 200px;
+  //   background-repeat: no-repeat;
+  //   background-position: 0 0, 99.5% 0;
+  //   overflow: hidden;
+  // }
 
   &__container {
     padding: 25px 0;
   }
 }
 
+// svg
+.box--angle {
+  margin-bottom: -77px;
+  height: 70px;
+  fill:#fff;
+}
+
+
 @media (min-width: 700px) {
   .box--shear:before {
     transform: rotate(-4.4deg);
+  }
+  .box--angle {
+    margin-bottom: -150px;
+    height: 145px;
   }
 }
 
@@ -48,7 +60,11 @@
   .box--shear:before {
     transform: rotate(-3.7deg);
   }
-  .box--angle:after {
-    bottom: -200px;
+  // .box--angle:after {
+  //   bottom: -200px;
+  // }
+  .box--angle {
+    margin-bottom: -255px;
+    height: 250px;
   }
 }
