--- a/css/style.css
+++ b/css/style.css
@@ -2033,7 +2033,7 @@ input[id^="btn-"] {
   overflow: hidden;
 }
 .features__mob-img img {
-  margin-bottom: -42px;
+  min-width: 157px;
 }
 @media (min-width: 700px) {
   .pull-sm {
@@ -2045,8 +2045,14 @@ input[id^="btn-"] {
   .features__item p {
     padding-bottom: 25px;
   }
+  .features__mob-img img {
+    max-width: 268px;
+  }
 }
 @media (min-width: 992px) {
+  .features {
+    text-align: center;
+  }
   .features__caption {
     font-size: 30px;
     line-height: 30px;
