--- a/less/style.less
+++ b/less/style.less
@@ -25,5 +25,7 @@
 @import 'blocks/effect.less';
 @import 'blocks/reviews.less';
 @import 'blocks/contacts.less';
+@import 'blocks/social-btns.less';
+
 
 
