--- a/css/style.css
+++ b/css/style.css
@@ -1314,7 +1314,8 @@ th {
 .clearlist,
 .page-header.open .main-nav > ul,
 .intro-desc__apps-list,
-.features {
+.features,
+.social {
   list-style: none;
   padding-left: 0;
   margin: 0;
@@ -2191,4 +2192,17 @@ input[id^="btn-"] {
   .contacts__map {
     height: 522px;
   }
+}
+.social {
+  margin: 10px 0;
+}
+.social__btn {
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  margin-right: 10px;
+  border: 3px solid #e9ebec;
+  color: transparent;
+  font: 0/0 a;
+  border-radius: 50%;
 }
